Fix a regression when dealing with tar(1) format files introduced with GNU cpio 2.8.

This is a direct commit against stable/7 because the
code have been removed on -HEAD and stable/8.

PR:		bin/147969
Submitted by:	kientzle